Centered img on mobile version, fixed ovewrlap in menu

--- a/src/styles/header/menu.scss
+++ b/src/styles/header/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   position: absolute;
-  padding-top: 104px;
+  padding-top: 30px;
+  padding-bottom: 20px;
   right: 0;
   top: 0;
   background-color: #e5e6e8;
@@ -11,6 +12,7 @@
   overflow: auto;
   transition: opacity 0.3s ease-in-out;
   pointer-events: none;
+  border-top: 50px solid #e5e6e8;
 
   @include onTablet {
     padding-top: 152px;
