--- a/src/styles/main/card.scss
+++ b/src/styles/main/card.scss
@@ -29,6 +29,7 @@
   &__photo {
     max-width: 100%;
     display: block;
+    margin-inline: auto;
     max-height: 500px;
     transition: transform 0.3s ease-in-out;
 
